--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
                     <a href="index.html">Home</a>
                 </div>
                 <div class="mobileNavLink">
-                    <a href="gallary.html">Gallary</a>
+                    <a href="gallery.html">Gallery</a>
                 </div>
                 <div class="mobileNavLink">
                     <a href="terms.html">Terms of service</a>
@@ -65,7 +65,7 @@
                             <a href="index.html">Home</a>
                         </div>
                         <div class="navLink">
-                            <a href="gallary.html">Gallary</a>
+                            <a href="gallery.html">Gallery</a>
                         </div>
                         <div class="navLink">
                             <a href="terms.html">Terms of service</a>
@@ -81,28 +81,28 @@
         
 
         <div class="main">
-            <div class="gallary">
-                <img src="./images/gallary/11.jpg" class="gallaryImage a">
-                <img src="./images/gallary/13.jpg" class="gallaryImage c">
-                <img src="./images/gallary/12.jpg" class="gallaryImage b">
-                <img src="./images/gallary/1.jpg" class="gallaryImage a">
-                <img src="./images/gallary/2.jpg" class="gallaryImage b">
-                <img src="./images/gallary/3.jpg" class="gallaryImage c">
-                <img src="./images/gallary/4.jpg" class="gallaryImage d">
-                <img src="./images/gallary/5.jpg" class="gallaryImage e">
-                <img src="./images/gallary/6.jpg" class="gallaryImage f">
-                <img src="./images/gallary/7.jpg" class="gallaryImage g">
-                <img src="./images/gallary/8.jpg" class="gallaryImage h">
-                <img src="./images/gallary/9.jpg" class="gallaryImage i">
-                <img src="./images/gallary/10.jpg" class="gallaryImage j">
+            <div class="gallery">
+                <img src="./images/gallery/11.jpg" class="galleryImage a">
+                <img src="./images/gallery/13.jpg" class="galleryImage c">
+                <img src="./images/gallery/12.jpg" class="galleryImage b">
+                <img src="./images/gallery/1.jpg" class="galleryImage a">
+                <img src="./images/gallery/2.jpg" class="galleryImage b">
+                <img src="./images/gallery/3.jpg" class="galleryImage c">
+                <img src="./images/gallery/4.jpg" class="galleryImage d">
+                <img src="./images/gallery/5.jpg" class="galleryImage e">
+                <img src="./images/gallery/6.jpg" class="galleryImage f">
+                <img src="./images/gallery/7.jpg" class="galleryImage g">
+                <img src="./images/gallery/8.jpg" class="galleryImage h">
+                <img src="./images/gallery/9.jpg" class="galleryImage i">
+                <img src="./images/gallery/10.jpg" class="galleryImage j">
 
-                <img src="./images/gallary/14.jpg" class="gallaryImage d">
-                <img src="./images/gallary/15.jpg" class="gallaryImage e">
-                <img src="./images/gallary/16.jpg" class="gallaryImage f">
-                <img src="./images/gallary/17.jpg" class="gallaryImage g">
-                <img src="./images/gallary/18.jpg" class="gallaryImage h">
-                <img src="./images/gallary/19.jpg" class="gallaryImage i">
-                <img src="./images/gallary/20.jpg" class="gallaryImage j">
+                <img src="./images/gallery/14.jpg" class="galleryImage d">
+                <img src="./images/gallery/15.jpg" class="galleryImage e">
+                <img src="./images/gallery/16.jpg" class="galleryImage f">
+                <img src="./images/gallery/17.jpg" class="galleryImage g">
+                <img src="./images/gallery/18.jpg" class="galleryImage h">
+                <img src="./images/gallery/19.jpg" class="galleryImage i">
+                <img src="./images/gallery/20.jpg" class="galleryImage j">
 
             </div>
         </div>
@@ -111,7 +111,7 @@
             <div class="FooterContent">
                 <div class="footerNav">
                     <div class="footerNavLink"><a class="footerNavATag" href="index.html">Home</a></div>
-                    <div class="footerNavLink"><a class="footerNavATag" href="gallary.html">Gallary</a></div>
+                    <div class="footerNavLink"><a class="footerNavATag" href="gallery.html">Gallery</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="terms.html">Terms of service</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="contact.html">Contact us</a></div>
                 </div>
