--- a/terms.html
+++ b/terms.html
@@ -24,7 +24,7 @@
                     <a href="index.html">Home</a>
                 </div>
                 <div class="mobileNavLink">
-                    <a href="gallary.html">Gallary</a>
+                    <a href="gallery.html">Gallery</a>
                 </div>
                 <div class="mobileNavLink">
                     <a href="terms.html">Terms of service</a>
@@ -65,7 +65,7 @@
                             <a href="index.html">Home</a>
                         </div>
                         <div class="navLink">
-                            <a href="gallary.html">Gallary</a>
+                            <a href="gallery.html">Gallery</a>
                         </div>
                         <div class="navLink">
                             <a href="terms.html">Terms of service</a>
@@ -95,7 +95,7 @@
             <div class="FooterContent">
                 <div class="footerNav">
                     <div class="footerNavLink"><a class="footerNavATag" href="index.html">Home</a></div>
-                    <div class="footerNavLink"><a class="footerNavATag" href="gallary.html">Gallary</a></div>
+                    <div class="footerNavLink"><a class="footerNavATag" href="gallery.html">Gallery</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="terms.html">Terms of service</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="contact.html">Contact us</a></div>
                 </div>
