--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="index.html">Home</a>
                 </div>
                 <div class="mobileNavLink">
-                    <a href="gallary.html">Gallary</a>
+                    <a href="gallery.html">Gallery</a>
                 </div>
                 <div class="mobileNavLink">
                     <a href="terms.html">Terms of service</a>
@@ -67,7 +67,7 @@
                             <a href="index.html">Home</a>
                         </div>
                         <div class="navLink">
-                            <a href="gallary.html">Gallary</a>
+                            <a href="gallery.html">Gallery</a>
                         </div>
                         <div class="navLink">
                             <a href="terms.html">Terms of service</a>
@@ -136,7 +136,7 @@
             <div class="FooterContent">
                 <div class="footerNav">
                     <div class="footerNavLink"><a class="footerNavATag" href="index.html">Home</a></div>
-                    <div class="footerNavLink"><a class="footerNavATag" href="gallary.html">Gallary</a></div>
+                    <div class="footerNavLink"><a class="footerNavATag" href="gallery.html">Gallery</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="terms.html">Terms of service</a></div>
                     <div class="footerNavLink"><a class="footerNavATag" href="contact.html">Contact us</a></div>
                 </div>
